--- a/app/src/main/res/layout/fragment_unused_coupons.xml
+++ b/app/src/main/res/layout/fragment_unused_coupons.xml
@@ -14,6 +14,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_coupon" />
+        tools:listitem="@layout/item_unused_coupon" />
+
+    <TextView
+        android:id="@+id/txt_empty_list"
+        style="@style/BoldText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_32"
+        android:text="@string/no_items_here"
+        android:textSize="@dimen/sb_text_size_16"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_32"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/unused_coupons_recycler_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
