--- a/app/src/main/res/layout/activity_wish_list.xml
+++ b/app/src/main/res/layout/activity_wish_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     tools:context=".activities.wishlist.WishListActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -72,6 +73,10 @@
                         android:id="@+id/recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/sb_size_8"
+                        android:layout_marginEnd="@dimen/sb_size_8"
+                        android:paddingStart="@dimen/sb_size_18"
+                        android:paddingEnd="@dimen/sb_size_18"
                         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:spanCount="2" />
 
@@ -115,6 +120,8 @@
                         android:id="@+id/recommendation_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/sb_size_12"
+                        android:layout_marginEnd="@dimen/sb_size_12"
                         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:spanCount="2" />
 
