--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/sb_size_2">
+    android:layout_margin="@dimen/sb_size_8">
 
     <ImageView
         android:id="@+id/img_recommended_product"
-        android:layout_width="@dimen/sb_size_100"
-        android:layout_height="@dimen/sb_size_140"
+        android:layout_width="@dimen/sb_size_80"
+        android:layout_height="120dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:contentDescription="@string/recommended_product"
@@ -22,14 +22,13 @@
 
     <TextView
         android:id="@+id/txt_recommended_product_price"
-        style="@style/BoldText"
+        style="@style/MediumText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textSize="@dimen/sb_text_size_14"
+        android:layout_marginTop="@dimen/sb_size_2"
+        android:textSize="@dimen/sb_text_size_12"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/img_recommended_product"
         app:layout_constraintTop_toBottomOf="@+id/img_recommended_product"
         tools:text="TextView" />
 
