--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -6,13 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".activities.CheckoutActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ToolbarStyle"
+        android:theme="@style/ToolbarStyle"
+        android:layout_width="match_parent"
+        app:title="@string/title_place_order"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        android:elevation="@dimen/sb_size_6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
         android:id="@+id/rlProgressBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="@color/transparent_shade"
         android:elevation="@dimen/sb_size_8"
         android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="gone">
 
         <ProgressBar
@@ -28,12 +43,13 @@
         app:layout_constraintBottom_toTopOf="@id/llPlaceOrder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/grey_100"
+            android:orientation="vertical"
             android:paddingBottom="@dimen/sb_size_30">
 
             <LinearLayout
@@ -44,10 +60,7 @@
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/sb_size_18"
-                android:paddingVertical="@dimen/sb_size_12"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:paddingVertical="@dimen/sb_size_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -90,8 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/sb_size_12"
                 android:background="@color/white"
-                android:paddingVertical="12dp"
-                app:layout_constraintTop_toBottomOf="@id/llShippingMethod">
+                android:paddingVertical="12dp">
 
                 <LinearLayout
                     android:id="@+id/linearLayout5"
@@ -158,8 +170,7 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/sb_size_18"
                 android:paddingVertical="@dimen/sb_size_12"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-                tools:visibility="gone">
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tvHeader3"
@@ -270,8 +281,7 @@
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/sb_size_18"
-                android:paddingVertical="@dimen/sb_size_12"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+                android:paddingVertical="@dimen/sb_size_12">
 
                 <LinearLayout
                     android:id="@+id/llApplyCoupon"
@@ -421,8 +431,7 @@
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/sb_size_18"
-                android:paddingVertical="@dimen/sb_size_12"
-                app:layout_constraintTop_toBottomOf="@id/llCouponAndOffer">
+                android:paddingVertical="@dimen/sb_size_12">
 
                 <TextView
                     android:id="@+id/tvHeader4"
@@ -452,10 +461,7 @@
                 android:background="@color/white"
                 android:gravity="bottom"
                 android:orientation="vertical"
-                android:paddingVertical="@dimen/sb_size_12"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/llProducts">
+                android:paddingVertical="@dimen/sb_size_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -600,7 +606,7 @@
                 app:layout_constraintTop_toBottomOf="@id/llPaymentDetails" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
@@ -631,7 +637,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical|start"
-                android:text="Total"
+                android:text="@string/total"
                 android:textColor="@color/blue_grey_900"
                 android:textSize="@dimen/sb_text_size_16"
                 android:textStyle="bold" />
@@ -648,7 +654,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/sb_size_8"
                 android:gravity="center_vertical|start"
-                android:text="300"
+                tools:text="300"
                 android:textColor="@color/blue_grey_900"
                 android:textSize="@dimen/sb_text_size_16"
                 android:textStyle="bold" />
@@ -661,7 +667,8 @@
             android:layout_marginHorizontal="@dimen/sb_text_size_22"
             android:layout_marginVertical="@dimen/sb_size_18"
             android:background="@color/blue_grey_900"
-            android:text="Place Order"
+            android:text="@string/place_order"
+            android:textStyle="bold"
             android:textColor="@color/white" />
 
     </LinearLayout>
