--- a/app/src/main/res/layout/activity_add_shipping_address.xml
+++ b/app/src/main/res/layout/activity_add_shipping_address.xml
@@ -136,6 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Pin code"
+                    android:maxLength="6"
                     android:theme="@style/MyEditTextTheme"
                     android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -156,6 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Contact Number"
+                    android:maxLength="10"
                     android:theme="@style/MyEditTextTheme"
                     android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
