--- a/app/src/main/res/layout/activity_add_shipping_address.xml
+++ b/app/src/main/res/layout/activity_add_shipping_address.xml
@@ -158,6 +158,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Contact Number"
                     android:maxLength="10"
+                    android:digits="0987654321"
                     android:theme="@style/MyEditTextTheme"
                     android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
