--- a/app/src/main/res/layout/activity_coupons.xml
+++ b/app/src/main/res/layout/activity_coupons.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.coupons.CouponsActivity">
+    tools:context=".activities.CouponsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
