--- a/app/src/main/res/layout/activity_wish_list.xml
+++ b/app/src/main/res/layout/activity_wish_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context=".activities.wishlist.WishListActivity">
+    tools:context=".activities.WishListActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
