--- a/app/src/main/res/layout/activity_recently_viewed.xml
+++ b/app/src/main/res/layout/activity_recently_viewed.xml
@@ -10,6 +10,8 @@
         android:id="@+id/toolbar"
         android:layout_width="@dimen/sb_size_0"
         android:layout_height="?actionBarSize"
+        android:background="@color/white"
+        android:elevation="@dimen/sb_size_6"
         android:theme="@style/ToolbarStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
