--- a/app/src/main/res/layout/fragment_recently_viewed.xml
+++ b/app/src/main/res/layout/fragment_recently_viewed.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragment.RecentlyViewedFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="2"
+        app:spanCount="3"
         tools:listitem="@layout/item_recently_viewed" />
 
     <TextView
