--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clProductRootView"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_marginHorizontal="@dimen/sb_size_2"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvDummy"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_6"
         app:cardCornerRadius="@dimen/sb_size_8"
         app:cardElevation="@dimen/sb_size_0"
         app:cardUseCompatPadding="true"
@@ -21,9 +21,10 @@
 
         <ImageView
             android:id="@+id/img_recently_viewed"
-            android:layout_width="120dp"
-            android:layout_height="165dp"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
             android:background="@null"
+            android:paddingHorizontal="2.5dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:contentDescription="@string/wish_list_image"
